--- a/UI/statistics.html
+++ b/UI/statistics.html
@@ -10,7 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <!-- Custom Theme files -->
 
@@ -27,6 +27,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <ul class="nav nav-tabs">
     <li role="presentation"><a href="index.html">Search</a></li>
     <li role="presentation" class="active"><a href="statistics.html">Statistics</a></li>
+    <li role="presentation"><a href="crawl.html">Crawl</a></li>
   </ul>
   <div class="matrix" >
     <table class="table table-condensed">
@@ -67,7 +68,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
   <div class="copyright">
     <p>CZ4034 Information Retrieval Team</p>
-  </div>  
+  </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
