--- a/UI/analytics.html
+++ b/UI/analytics.html
@@ -1,8 +1,4 @@
-<!--Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -12,13 +8,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <!-- Custom Theme files -->
 
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
   <link href="css/analytics.css" rel="stylesheet" type="text/css" media="all"/>
 
-  <!--Google Font-->
+ 
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 </head>
 
@@ -31,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   </ul>
   <div class="matrix" >
     <table class="table table-condensed">
-     <caption>Confusion Matrix(Test data)</caption>
+     <caption>Confusion Matrix</caption>
      <thead>
        <tr>
         <th></th>
@@ -43,21 +38,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
       <tr>
         <th>Actual Positive</th>
-        <td>75</td>
-        <td>68</td>
-        <td>28</td>
+        <td>161</td>
+        <td>18</td>
+        <td>77</td>
       </tr>
       <tr>
         <th>Actual Neutral</th>
-        <td>10</td>
-        <td>155</td>
-        <td>67</td>
+        <td>33</td>
+        <td>38</td>
+        <td>444</td>
       </tr>
       <tr>
         <th>Actual Negative</th>
-        <td>5</td>
-        <td>48</td>
-        <td>190</td>
+        <td>18</td>
+        <td>310</td>
+        <td>101</td>
       </tr>
     </table>
   </div>
