--- a/UI/crawl.html
+++ b/UI/crawl.html
@@ -13,9 +13,9 @@
   <script src="bower_components/angular/angular.min.js"></script>
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css"/>
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
-  <link href="css/crawl.css" rel="stylesheet" type="text/css" media="all"/>
+  <!-- <link href="css/crawl.css" rel="stylesheet" type="text/css" media="all"/> -->
 
- 
+
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 </head>
 
@@ -50,9 +50,9 @@
   </button>
 
   <br>
-  
+
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  
+
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
   <script src="js/crawl.js"></script>
